samples/_failures_safe/1761082240_e219a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da70f899.c: In function ‘main’:
./samples/SAFE/__tmp_da70f899.c:174:5: error: expected declaration or statement at end of input
  174 |     for (k = 0; k < token_count; k++) {
      |     ^~~
./samples/SAFE/__tmp_da70f899.c:174:5: error: expected declaration or statement at end of input
